@@ -59,7 +59,7 @@ typedef void (gdb_events_tracepoint_create_ftype) (int number);
 typedef void (gdb_events_tracepoint_delete_ftype) (int number);
 typedef void (gdb_events_tracepoint_modify_ftype) (int number);
 typedef void (gdb_events_architecture_changed_ftype) (void);
-typedef void (gdb_events_register_update_ftype) (int regno);
+typedef void (gdb_events_target_changed_ftype) (void);
 typedef void (gdb_events_selected_frame_level_changed_ftype) (int level);
 typedef void (gdb_events_context_changed_ftype) (int num);
 
@@ -75,7 +75,7 @@ struct gdb_events
     gdb_events_tracepoint_delete_ftype *tracepoint_delete;
     gdb_events_tracepoint_modify_ftype *tracepoint_modify;
     gdb_events_architecture_changed_ftype *architecture_changed;
-    gdb_events_register_update_ftype *register_update;
+    gdb_events_target_changed_ftype *target_changed;
     gdb_events_selected_frame_level_changed_ftype *selected_frame_level_changed;
     gdb_events_context_changed_ftype *context_changed;
   };
@@ -91,7 +91,7 @@ extern void tracepoint_create_event (int number);
 extern void tracepoint_delete_event (int number);
 extern void tracepoint_modify_event (int number);
 extern void architecture_changed_event (void);
-extern void register_update_event (int regno);
+extern void target_changed_event (void);
 extern void selected_frame_level_changed_event (int level);
 extern void context_changed_event (int num);
 
@@ -106,7 +106,7 @@ extern void context_changed_event (int num);
 #define tracepoint_delete_event(number) 0
 #define tracepoint_modify_event(number) 0
 #define architecture_changed_event() 0
-#define register_update_event(regno) 0
+#define target_changed_event() 0
 #define selected_frame_level_changed_event(level) 0
 #define context_changed_event(num) 0
 #endif
